--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
 <link rel="manifest" href="./manifest.json">
 
+<title>Happy Mother's Day!</title>
+
 <header>
   <h1>Happy Mother's Day!</h1>
   <p>To my amazing, beautiful, kind, and caring <abbr title='Brenda Pfohl'>Mom</abbr>.</p>
